--- a/basics1/src/good-documentation.Rmd
+++ b/basics1/src/good-documentation.Rmd
@@ -1,7 +1,12 @@
 ---
 title: "Good Documentation"
 author: "Steve Simon"
-output: powerpoint_presentation
+output:
+  powerpoint_presentation: default
+  pdf_document: default
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") })  
 ---
 
 ```{r setup, echo=FALSE}
