--- a/basics_syllabus/src/syllabus.Rmd
+++ b/basics_syllabus/src/syllabus.Rmd
@@ -138,7 +138,14 @@ Each module should take roughly one week. If a particular topic is causing the c
 
 `r read_text("objectives01", path="../basics1/data")`
 
-+ Module 0, Getting started. A general introduction to SAS and information on how to run SAS on your computer.
+`r read_text("objectives02", path="../basics2/data")`
+
+`r read_text("objectives03", path="../basics3/data")`
+
+`r read_text("objectives04", path="../basics4/data")`
+
+`r read_text("objectives05", path="../basics5/data")`
+
 
 + Module 1, Reading data from a variety of text formats. Variable labels. Missing value codes. Means, standard deviations, and percentiles. Histograms and scatterplots. Functional transformations. Program documentation.
 
