--- a/basics1/readings/hemedinger-2016.bib
+++ b/basics1/readings/hemedinger-2016.bib
@@ -1,9 +1,8 @@
 @misc{Hemedinger2016,
-  abstract = {We've just celebrated Earth Day, but I'm here to talk about Jupyter -- and the SAS open source project that opens the door for more learning. With this new project on the github.com/sassoftware page, SAS contributes new support for running SAS from within Jupyter Notebooks -- a popular browser-based environment used by professors and data scientists. My colleague Amy Peters announced this during a SAS Tech Talk show at SAS Global Forum 2016. If you want to learn more about Jupyter and see the SAS support in action, then you can watch the video here.},
   author = {Hemedinger, Chris},
+  date = {2016-04-24}
+  html = {https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/},
   journal = {The SAS Dummy blog},
   title = {How to run SAS programs in Jupyter Notebook, The SAS Dummy blog, 2016-04-24},
-  html = {https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/},
   urldate = {2019-06-10},
-  year = {2016}
 }
