--- a/basics1/readings/hemken-2019.bib
+++ b/basics1/readings/hemken-2019.bib
@@ -1,7 +1,7 @@
-@misc{hemken-2019,
-  abstract = {This is an introduction to using SASmarkdown (an R package) to produce documents based on SAS. (For installation instructions see The SASmarkdown package). Using SASmarkdown in RStudio (or in R) gives you a method for writing simple documents which include the results of executing SAS commands. Both the document text and the source SAS code are in one file. This is especially good for writing simple documents that explain statistical coding tasks. One way to think of this is as an extended and more readable version of writing comments in your source code. (It is also possible to turn SAS command files into documents, by including specially formatted comments, see Spinning SAS files.) For an example of what a SASmarkdown document looks like, the source for this document is SASmarkdown.rmd},
+@misc{hemken-2020,
   author = {Hemken, Doug},
-  title = {SAS Using R Markdown (Windows)},
+  date = {2020-02-01},
   html = {https://www.ssc.wisc.edu/~hemken/SASworkshops/Markdown/SASmarkdown.html},
+  title = {SAS Using R Markdown (Windows)},
   urldate = {2019-06-10}
 }
