--- a/basics1/readings/sas-2019.bib
+++ b/basics1/readings/sas-2019.bib
@@ -1,6 +1,8 @@
 @misc{sas-2019,
-abstract = {Free SAS software for academic, noncommercial use. An interactive, online community. Superior training and documentation. And the analytical skills you need to secure your future.},
 author = {SAS Institute},
+date = {2020},
+html = {https://www.sas.com/en_us/software/university-edition.html},
+journal = {sas.com}
 title = {SAS University Edition},
-html = {https://www.sas.com/en_us/software/university-edition.html}
+urldate = {2019-10-08}
 }
